syntax = "proto3";

package fixbug;

option cc_generic_services = true;

message ResultCode{
    int32 errcode = 1;
    bytes errmsg = 2;
}

message RegistRequest{
    bytes username = 1;
    bytes password = 2;
}

message RegistResponse{
    ResultCode result = 1;
    int32 userid = 2;
}

message LoginRequest{
    int32 userid = 1;
    bytes password = 2;
}

message LoginResponse{
    ResultCode result = 1;
    GetFriendListResponse getfriendlistresponse = 2;
    GetGroupListResponse getgrouplistresponse = 3;
    GetOfflineMsgResponse getofflinemsgresponse = 4;
}

message LoginoutRequest{
    int32 userid = 1;
}

message LoginoutResponse{
    ResultCode result = 1;
}

message GetFriendListRequest{
    int32 userid = 1;
}

message GetFriendListResponse{
    ResultCode result = 1;
    repeated bytes friends = 2;
}

message GetGroupListRequest{
    int32 userid = 1;
}

message GetGroupListResponse{
    ResultCode result = 1;
    repeated bytes groups = 2;
}

message FriendChatRequest{
    int32 friendid = 1;
    bytes message = 2;
}

message FriendChatResponse{
    ResultCode result = 1;
}

message GetOfflineMsgRequest{
    int32 userid = 1;
}

message GetOfflineMsgResponse{
    ResultCode result = 1;
    repeated bytes offlinemsg = 2;
}

service  UserServiceRpc{
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc Regist(RegistRequest) returns(RegistResponse);
    rpc Loginout(LoginoutRequest) returns(LoginoutResponse);
}

service FriendAndGroupServiceRpc{
    rpc GetFriendList(GetFriendListRequest) returns(GetFriendListResponse);
    rpc GetGroupList(GetGroupListRequest) returns(GetGroupListResponse);
}

service ChatServiceRpc{
    rpc FriendChat(FriendChatRequest) returns(FriendChatResponse);
    rpc GetOfflineMsg(GetOfflineMsgRequest) returns(GetOfflineMsgResponse);
}